--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:T98esciyfiobw7S9l/6E63Ar075+lGeoXHICZCa84jY=
+APP_KEY=
 APP_DEBUG=true
-APP_URL=https://hctimer.com
+APP_URL=https:
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,8 +11,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=happy_customer
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -29,13 +29,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=hctimer.com
+MAIL_HOST=
 MAIL_PORT=587
-MAIL_USERNAME=info@hctimer.com
-MAIL_PASSWORD=@HCpayroll1!
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=info@hctimer.com
-MAIL_FROM_NAME=Hctimer
+
+MAIL_FROM_NAME=
 
 
 AWS_ACCESS_KEY_ID=
